src/tests/select/snapshots/ciboulette2postgres__tests__select__sparse.snap
---
source: src/tests/select/mod.rs
expression: value

---
[
  {
    "id": "[uuid]",
    "type_": "articles",
    "data": null
  },
  {
    "id": "[uuid]",
    "type_": "articles",
    "data": null
  },
  {
    "id": "[uuid]",
    "type_": "favorite_color",
    "data": null
  },
  {
    "id": "[uuid]",
    "type_": "people-article",
    "data": null
  },
  {
    "id": "[uuid]",
    "type_": "people-article",
    "data": null
  },
  {
    "id": "[uuid]",
    "type_": "peoples",
    "data": {
      "first-name": "Francis"
    }
  }
]
